syntax = "proto3";

option csharp_namespace = "BookService.Infrastructure.Grpc";

service BookService{
	rpc GetBookName (GetBookNameRequest) returns (BookNameResponse);
}

message GetBookNameRequest {
	string book_id = 1;
}

message BookNameResponse {
	string bookname = 1;
}